added temporary dependency check exclusion for CVE-2018-7489 Activiti/Activiti#1838

--- a/modules/activiti-admin/pom.xml
+++ b/modules/activiti-admin/pom.xml
@@ -10,6 +10,9 @@
   <artifactId>activiti-admin</artifactId>
   <packaging>war</packaging>
   <name>Activiti Admin</name>
+  <properties>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
+  </properties>
   <dependencies>
 
     <!-- Activiti -->
