--- a/modules/activiti-jms-spring-executor/pom.xml
+++ b/modules/activiti-jms-spring-executor/pom.xml
@@ -12,6 +12,10 @@
 	<artifactId>activiti-jms-spring-executor</artifactId>
 	<name>Activiti - JMS - Spring - Executor</name>
 
+	<properties>
+		<suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
