--- a/modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-jpa/pom.xml
+++ b/modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-jpa/pom.xml
@@ -10,6 +10,9 @@
   </parent>
 
   <artifactId>activiti-spring-boot-starter-jpa</artifactId>
+  <properties>
+    <suppressionFile>${basedir}/../../../../dependency-check-suppression.xml</suppressionFile>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>com.h2database</groupId>
