--- a/modules/activiti-webapp-rest2/pom.xml
+++ b/modules/activiti-webapp-rest2/pom.xml
@@ -13,12 +13,11 @@
     <version>6.0.1-SNAPSHOT</version>
   </parent>
 
-  <!-- swagger config -->
   <properties>
     <swagger.host>localhost:8080</swagger.host>
     <swagger.generated.directory>target/generated-swagger</swagger.generated.directory>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
-  <!-- swagger config end-->
 
   <build>
     <plugins>
