--- a/modules/activiti-camel/pom.xml
+++ b/modules/activiti-camel/pom.xml
@@ -14,6 +14,13 @@
     <version>6.0.1-SNAPSHOT</version>
   </parent>
 
+  <properties>
+    <activiti.osgi.import.pkg>*</activiti.osgi.import.pkg>
+    <activiti.artifact>
+      org.activiti.camel
+    </activiti.artifact>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -69,14 +76,6 @@
     </dependency>
 
   </dependencies>
-
-
-  <properties>
-    <activiti.osgi.import.pkg>*</activiti.osgi.import.pkg>
-    <activiti.artifact>
-      org.activiti.camel
-    </activiti.artifact>
-  </properties>
 
   <profiles>
     <profile>
