--- a/modules/activiti-common-rest/pom.xml
+++ b/modules/activiti-common-rest/pom.xml
@@ -18,6 +18,7 @@
     <activiti.artifact>
       org.activiti.rest.common
     </activiti.artifact>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
