--- a/modules/activiti-dmn-model/pom.xml
+++ b/modules/activiti-dmn-model/pom.xml
@@ -18,6 +18,7 @@
 		<activiti.artifact>
 			org.activiti.dmn.model
 		</activiti.artifact>
+		<suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
 	</properties>
 
 	<dependencies>
