--- a/modules/activiti-form-model/pom.xml
+++ b/modules/activiti-form-model/pom.xml
@@ -18,6 +18,7 @@
 		<activiti.artifact>
 			org.activiti.form.model
 		</activiti.artifact>
+		<suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
 	</properties>
 
 	<dependencies>
