--- a/modules/activiti-ldap/pom.xml
+++ b/modules/activiti-ldap/pom.xml
@@ -15,6 +15,7 @@
     <activiti.artifact>
       org.activiti.ldap
     </activiti.artifact>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
   <dependencies>
     <dependency>
