--- a/modules/activiti-rest/pom.xml
+++ b/modules/activiti-rest/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <activiti.artifact>org.activiti.rest.service</activiti.artifact>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
     <swagger.version>1.5.10</swagger.version>
   </properties>
 
