--- a/modules/activiti-spring-boot/spring-boot-samples/spring-boot-sample-integration/pom.xml
+++ b/modules/activiti-spring-boot/spring-boot-samples/spring-boot-sample-integration/pom.xml
@@ -10,6 +10,10 @@
 
   <artifactId>spring-boot-sample-integration</artifactId>
 
+  <properties>
+    <suppressionFile>${basedir}/../../../../dependency-check-suppression.xml</suppressionFile>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.activiti</groupId>
