--- a/modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-integration/pom.xml
+++ b/modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-integration/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <suppressionFile>${basedir}/../../../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <dependencies>
