--- a/modules/activiti-ui/activiti-app-logic/pom.xml
+++ b/modules/activiti-ui/activiti-app-logic/pom.xml
@@ -8,6 +8,9 @@
     <version>6.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>activiti-app-logic</artifactId>
+  <properties>
+    <suppressionFile>${basedir}/../../../dependency-check-suppression.xml</suppressionFile>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.activiti</groupId>
