--- a/modules/activiti5-cxf-test/pom.xml
+++ b/modules/activiti5-cxf-test/pom.xml
@@ -13,6 +13,10 @@
     <version>6.0.1-SNAPSHOT</version>
   </parent>
 
+  <properties>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
+  </properties>
+
   <build>
     <resources>
       <resource>
