--- a/modules/activiti5-engine/pom.xml
+++ b/modules/activiti5-engine/pom.xml
@@ -13,6 +13,30 @@
     <version>6.0.1-SNAPSHOT</version>
   </parent>
 
+  <properties>
+    <activiti.artifact>
+      org.activiti5.engine
+    </activiti.artifact>
+    <activiti.osgi.export.additional>
+      org.activiti.db.mapping.entity
+    </activiti.osgi.export.additional>
+    <activiti.osgi.import.additional>
+      junit*;resolution:=optional,
+      org.junit*;resolution:=optional,
+      com.sun*;resolution:=optional,
+      javax.persistence*;resolution:=optional,
+      org.apache.commons.mail*;resolution:=optional,
+      org.activiti.camel;resolution:=optional,
+      org.activiti.camel.impl;resolution:=optional,
+      org.springframework*;resolution:=optional,
+      org.drools*;resolution:=optional,
+      com.fasterxml*;resolution:=optional,
+      javax.transaction;resolution:=optional,
+      javax.enterprise.concurrent;resolution:=optional,
+    </activiti.osgi.import.additional>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.activiti</groupId>
@@ -154,29 +178,6 @@
     </dependency>
 
   </dependencies>
-
-  <properties>
-    <activiti.artifact>
-      org.activiti5.engine
-    </activiti.artifact>
-    <activiti.osgi.export.additional>
-      org.activiti.db.mapping.entity
-    </activiti.osgi.export.additional>
-    <activiti.osgi.import.additional>
-      junit*;resolution:=optional,
-      org.junit*;resolution:=optional,
-      com.sun*;resolution:=optional,
-      javax.persistence*;resolution:=optional,
-      org.apache.commons.mail*;resolution:=optional,
-      org.activiti.camel;resolution:=optional,
-      org.activiti.camel.impl;resolution:=optional,
-      org.springframework*;resolution:=optional,
-      org.drools*;resolution:=optional,
-      com.fasterxml*;resolution:=optional,
-      javax.transaction;resolution:=optional,
-      javax.enterprise.concurrent;resolution:=optional,
-    </activiti.osgi.import.additional>
-  </properties>
 
   <build>
     <plugins>
