refactoring for CVE-2018-7489 Activiti/Activiti#1838

--- a/modules/activiti-bpmn-converter/pom.xml
+++ b/modules/activiti-bpmn-converter/pom.xml
@@ -8,8 +8,8 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
-    <relativePath>../..</relativePath>
+    <artifactId>activiti-parent</artifactId>
+    <relativePath>../activiti-parent</relativePath>
     <version>6.0.1-SNAPSHOT</version>
   </parent>
 
@@ -20,7 +20,6 @@
     <activiti.osgi.export.additional>
       org.activiti.bpmn.constants,org.activiti.bpmn.util,org.activiti.bpmn.exceptions
     </activiti.osgi.export.additional>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
