--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ notifications:
 
 before_script:
   - echo MAVEN_OPTS=-Xmx1536m > ~/.mavenrc
+  - cd modules/activiti-dependency-check && mvn install
 
 # Enable integration tests
 script:
