--- a/modules/activiti-bpmn-model/pom.xml
+++ b/modules/activiti-bpmn-model/pom.xml
@@ -8,9 +8,9 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
-    <relativePath>../..</relativePath>
+    <artifactId>activiti-parent</artifactId>
     <version>6.0.1-SNAPSHOT</version>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
   
   <properties>
@@ -20,7 +20,6 @@
     <activiti.osgi.import.additional>
       org.apache.commons.lang;resolution:=optional
     </activiti.osgi.import.additional>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
