--- a/modules/activiti-jmx/pom.xml
+++ b/modules/activiti-jmx/pom.xml
@@ -8,16 +8,15 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
+    <artifactId>activiti-parent</artifactId>
     <version>6.0.1-SNAPSHOT</version>
-    <relativePath>../..</relativePath>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
 
   <properties>
     <activiti.artifact>
       org.activiti.jmx
     </activiti.artifact>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <dependencies>
