--- a/modules/activiti-ldap/pom.xml
+++ b/modules/activiti-ldap/pom.xml
@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
+    <artifactId>activiti-parent</artifactId>
     <version>6.0.1-SNAPSHOT</version>
-    <relativePath>../..</relativePath>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
   <artifactId>activiti-ldap</artifactId>
   <name>Activiti - LDAP</name>
@@ -15,7 +15,6 @@
     <activiti.artifact>
       org.activiti.ldap
     </activiti.artifact>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
   <dependencies>
     <dependency>
