--- a/modules/activiti-rest/pom.xml
+++ b/modules/activiti-rest/pom.xml
@@ -4,9 +4,9 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
+    <artifactId>activiti-parent</artifactId>
     <version>6.0.1-SNAPSHOT</version>
-    <relativePath>../..</relativePath>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
 
   <artifactId>activiti-rest</artifactId>
@@ -14,7 +14,6 @@
 
   <properties>
     <activiti.artifact>org.activiti.rest.service</activiti.artifact>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
     <swagger.version>1.5.10</swagger.version>
   </properties>
 
