--- a/modules/activiti-webapp-explorer2/pom.xml
+++ b/modules/activiti-webapp-explorer2/pom.xml
@@ -5,18 +5,14 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
+    <artifactId>activiti-parent</artifactId>
     <version>5.23.0-SNAPSHOT</version>
-    <relativePath>../..</relativePath>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
 
   <artifactId>activiti-webapp-explorer2</artifactId>
   <packaging>war</packaging>
   <name>Activiti - Webapp - Explorer V2</name>
-
-  <properties>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
-  </properties>
 
   <repositories>
     <repository>
