--- a/modules/activiti-osgi/pom.xml
+++ b/modules/activiti-osgi/pom.xml
@@ -9,9 +9,9 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
-    <relativePath>../..</relativePath>
+    <artifactId>activiti-parent</artifactId>
     <version>5.23.0-SNAPSHOT</version>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
 
   <properties>
@@ -24,7 +24,6 @@
     <activiti.artifact>
       org.activiti.osgi
     </activiti.artifact>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
