--- a/modules/activiti-rest/pom.xml
+++ b/modules/activiti-rest/pom.xml
@@ -4,9 +4,9 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
+    <artifactId>activiti-parent</artifactId>
     <version>5.23.0-SNAPSHOT</version>
-    <relativePath>../..</relativePath>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
 
   <artifactId>activiti-rest</artifactId>
@@ -16,7 +16,6 @@
     <activiti.artifact>
       org.activiti.rest.service
     </activiti.artifact>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
