--- a/modules/activiti-secure-service-tasks/pom.xml
+++ b/modules/activiti-secure-service-tasks/pom.xml
@@ -3,15 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
+    <artifactId>activiti-parent</artifactId>
     <version>5.23.0-SNAPSHOT</version>
-    <relativePath>../..</relativePath>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
   <artifactId>activiti-secure-service-tasks</artifactId>
   <name>Activiti - Secure Service Tasks</name>
-  <properties>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
-  </properties>
   <dependencies>
     <dependency>
       <groupId>org.activiti</groupId>
