--- a/modules/activiti-simple-workflow-alfresco/pom.xml
+++ b/modules/activiti-simple-workflow-alfresco/pom.xml
@@ -8,14 +8,10 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
-    <relativePath>../..</relativePath>
+    <artifactId>activiti-parent</artifactId>
     <version>5.23.0-SNAPSHOT</version>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
-
-  <properties>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
-  </properties>
 
   <dependencies>
     <!-- BPMN model conversion -->
