--- a/modules/activiti-spring/pom.xml
+++ b/modules/activiti-spring/pom.xml
@@ -7,9 +7,9 @@
 
   <parent>
     <groupId>org.activiti</groupId>
-    <artifactId>activiti-root</artifactId>
-    <relativePath>../..</relativePath>
+    <artifactId>activiti-parent</artifactId>
     <version>5.23.0-SNAPSHOT</version>
+    <relativePath>../activiti-parent</relativePath>
   </parent>
 
   <properties>
@@ -19,7 +19,6 @@
     <activiti.osgi.import.additional>
       org.springframework.test.context*;resolution:=optional,
     </activiti.osgi.import.additional>
-    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
