--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
     <commons-io.version>2.6</commons-io.version>
     <el-api.version>2.2</el-api.version>
     <geronimo.version>1.1.1</geronimo.version>
+    <jackson.version>2.9.5</jackson.version>
     <java-uuid-generator.version>3.1.4</java-uuid-generator.version>
     <javaGeom.version>0.11.1</javaGeom.version>
     <javax.enterprise.concurrent-api.version>1.0</javax.enterprise.concurrent-api.version>
@@ -134,6 +135,13 @@
   </properties>
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.fasterxml.jackson</groupId>
+        <artifactId>jackson-bom</artifactId>
+        <version>${jackson.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
